# fibery-telegram

./: .gitignore  README.md  app.py  config.app.json  config.sync.json  pyproject.toml  schema.json
src/: app.py  dates.py  telegram.py
