[project]
name = "fibery-telegram"
version = "0.1.0"
description = "An integration to sync telegram messages into fibery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.3",
    "python-telegram>=0.19.0",
    "python-telegram-bot>=22.3",
    "requests==2.32.3",
    "telethon>=1.41.2",
]
